--- a/saper/MainWindow.xaml
+++ b/saper/MainWindow.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:saper"
         mc:Ignorable="d"
-        Title="Saper" Height="600" Width="800" Background="#FF1E2D2F">
+        Title="Saper" Height="600" Width="800" Background="#FF1E2D2F" Name="mainWindow">
     <Grid>
-        <Grid x:Name="grid_menu" Visibility="Collapsed">
+        <Grid x:Name="grid_menu" Visibility="Visible">
             <Grid.RowDefinitions>
                 <RowDefinition Height="0.5*"/>
                 <RowDefinition Height="auto"/>
@@ -18,12 +18,12 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
 
-            <Label Grid.Row="1" Grid.Column="0" Content="Saper" FontSize="50" FontFamily="Goudy Stout" Foreground="#FFE01A4F" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            <Label Grid.Row="1" Grid.Column="0" Content="Saper" FontSize="120" FontFamily="Algerian" Foreground="#f4442e" HorizontalAlignment="Center" VerticalAlignment="Top"/>
 
             <StackPanel Grid.Row="2" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <Button x:Name="btnEasy" Content="Easy" FontSize="36" Width="300" Margin="0,0,0,5" Click="SelectLvlButtonClick"/>
-                <Button x:Name="btnNormal" Content="Normal" FontSize="36" Width="300" Margin="0,0,0,5" Click="SelectLvlButtonClick"/>
-                <Button x:Name="btnHard" Content="Hard" FontSize="36" Width="300" Margin="0,0,0,5" Click="SelectLvlButtonClick"/>
+                <Button x:Name="btnEasy" Content="Easy" FontSize="36" Width="300" Margin="0,0,0,5" Click="SelectLvlButtonClick" FontFamily="Bahnschrift SemiBold"/>
+                <Button x:Name="btnNormal" Content="Normal" FontSize="36" Width="300" Margin="0,0,0,5" Click="SelectLvlButtonClick" FontFamily="Bahnschrift SemiBold"/>
+                <Button x:Name="btnHard" Content="Hard" FontSize="36" Width="300" Margin="0,0,0,5" Click="SelectLvlButtonClick" FontFamily="Bahnschrift SemiBold"/>
             </StackPanel>
             
         </Grid>
